gobmkida/g1/recognize_eye
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/recognize_eye/src/engine/optics.c:1765:7: error: use of undeclared identifier 'byte_A4695F'
if ( !byte_A4695F[++v54] ) 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/recognize_eye/src/obj/1/optics.o] Error 1
